# ubik-tui

./: install.sh  pyproject.toml  wezterm.lua
src/ubik_tui/: __init__.py  app.py  main.py  ubik.tcss
